# prism-chain

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  LICENSE  Makefile  README.md  WHITEPAPER.md  docker-compose.yml
ai/: CLAUDE.md  README.md
benchmarks/: CLAUDE.md  README.md
branding/: README.md
bridges/: CLAUDE.md  README.md
cli-wallet/: package.json
cli-wallet/src/: index.ts  types.ts
connect-kit/: CLAUDE.md  README.md  package.json  tsconfig.json
connect-kit/src/: ConnectButton.tsx  SolCloneProvider.tsx  WalletModal.tsx  index.ts  (+2 more)
defi/: CLAUDE.md  README.md
docker/: Dockerfile.explorer  Dockerfile.faucet  Dockerfile.validator  README.md  faucet-server.js
docs/: README.md
docs-site/: CLAUDE.md
ecosystem/: CLAUDE.md  README.md
examples/: README.md
faucet/: README.md  package-lock.json  package.json
flutter-wallet/: README.md  pubspec.yaml
governance/: CLAUDE.md  README.md
health-dashboard/: README.md  package-lock.json  package.json
networks/: README.md
nft-marketplace/: CLAUDE.md  README.md
ops/: README.md
privacy/: CLAUDE.md
programs/batch-tx/: Cargo.toml
programs/batch-tx/src/: lib.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/privacy/: Cargo.toml
programs/privacy/src/: lib.rs
programs/pusd-stablecoin/: Cargo.toml
programs/pusd-stablecoin/src/: lib.rs
scripts/: README.md  airdrop.sh  deploy-program.sh  setup.sh
templates/: CLAUDE.md  README.md
tokenomics/: config.json
wallet-connect/: CLAUDE.md  README.md  package.json
wallet-standard/: CLAUDE.md  README.md  package.json
(+161 files in other folders)
