[package]
name = "prism-batch-tx"
version = "0.1.0"
edition = "2021"
description = "Enhanced transaction types: batch, scheduled, conditional, and recurring transfers"
license = "Apache-2.0"

[dependencies]
solana-program = "2.0"
borsh = "0.10"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
