[package]
name = "prism-oracle"
version = "0.1.0"
edition = "2021"
description = "Native on-chain oracle program with multi-source aggregation, confidence intervals, and staleness checks"
license = "Apache-2.0"

[dependencies]
solana-program = "2.0"
borsh = "0.10"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
