[package]
name = "prism-privacy"
version = "0.1.0"
edition = "2021"
description = "Enhanced privacy program for the Prism blockchain with confidential transfers and shielded pools"
license = "Apache-2.0"

[dependencies]
solana-program = "2.0"
borsh = "0.10"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
