[package]
name = "prism-pusd-stablecoin"
version = "0.1.0"
edition = "2021"
description = "PUSD algorithmic stablecoin backed by PRISM collateral with liquidation and stability fees"
license = "Apache-2.0"

[dependencies]
solana-program = "2.0"
borsh = "0.10"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
